# libsexy3

./: .gitignore  .travis.yml  404.html  Makefile.am  README.md  autogen.sh  configure.ac  index.html  meson.build  style.css
c/: SexySpellEntry.html  annotation-glossary.html  api-index-full.html  ch01.html  deprecated-api-index.html  index.html  object-tree.html
data/: Makefile.am  libsexy3.pc.in  meson.build  sexy-catalog.xml
docs/reference/: Makefile.am  libsexy3-docs.sgml  libsexy3-sections.txt  meson.build
examples/c/: Makefile  main.c
examples/python/: main.py  main.ui  style.css
examples/vala/: Makefile  main.vala
libsexy/: Makefile.am  Sexy-3.0.metadata  gtkspell-iso-codes.c  meson.build  sexy-spell-entry.c  sexy-spell-entry.h  sexy.h  sexy.map
po/: Makevars  POTFILES.in  meson.build
py/: genindex.html  index.html  objects.inv  search.html  searchindex.js
py/_images/: inheritance-0bc39cf2731b3dc4b3ffc766d9a435938eb90353.png.map
py/api/Sexy_3.0/: enums.html  functions.html  index.html
py/api/Sexy_3.0/classes/: SpellEntry.html  index.html
